tests/fixtures/invalid/static_local_declaration.c
int main() {
    static int count = 0;
    return count;
}
